--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-boxll;
+    box-sizing: border-box;
 }
 
 :root {
@@ -140,6 +141,11 @@ main {
 
         div:has(input:checked){
             .custom-checkbox{
+                 label {
+            cursor: pointer;
+        }
+        div:has(input:checked) {
+            .custom-checkbox {
                 background: var(--color-brand);
                 border: 1px solid var(--color-brand);
                 transition: .2s;
@@ -161,9 +167,11 @@ main {
                 width: 1.6rem;
                 opacity: .7;
             }
-        }
+         }
+       }
     }
-}
+ }
+
 .warning {
     background: var(--color-danger);
     color: var(--always-white);
@@ -172,6 +180,7 @@ main {
     align-items: center;
     justify-content: space-between;
     border-radius: 1.2rem;
+    margin-top: 2.4rem;
     opacity: 1;
     transform: translateY(0);
     transition: opacity 0.4s ease, transform 0.4s ease;
@@ -190,6 +199,7 @@ main {
         border: none;
         background: none;
         color: var(--always-white);
+        cursor: pointer;
     }
 }
 
@@ -220,4 +230,5 @@ main {
             grid-column: 8 / 11;
         }
     }
-}
+   }
+} 
